--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/schedule": "^6.0.0",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
