update cron trigger

--- a/vercel.json
+++ b/vercel.json
@@ -15,11 +15,11 @@
     "crons": [
       {
         "path": "/cron/check-in",
-        "schedule": "0 1 * * *"
+        "schedule": "0 1 * * 1-5"
       },
       {
         "path": "/cron/check-out",
-        "schedule": "0 11 * * *"
+        "schedule": "0 11 * * 1-5"
       }
     ]
   }
